hybris-on-anthos-infra-as-code/2_Deployment/2_gke/a1_gke_foundation.yaml
kind: Namespace
apiVersion: v1
metadata:
  labels:
    istio-injection: enabled
  name: hybris-gke
  resourceVersion: "94605"
  selfLink: /api/v1/namespaces/hybris
  uid: ae51cf0b-5972-11ea-9c28-a673ea5a8a0f
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  labels:
    app: nfs-server-gke
  name: nfs-server-gke
  namespace: hybris-gke
spec:
  serviceName: nfs-server-gke-svc
  replicas: 1
  selector:
    matchLabels:
      app: nfs-server-gke
  template:
    metadata:
      labels:
       app: nfs-server-gke
    spec:
      restartPolicy: Always
      containers:
        - name: nfs-server
          image: itsthenetwork/nfs-server-alpine
          ports:
          - name: nfs
            containerPort: 2049
            protocol: TCP
          - name: rpcbind
            containerPort: 111              
            protocol: UDP
          - name: mountd
            containerPort: 20048
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_ADMIN
          volumeMounts:
          - mountPath: /mnt/nfs
            name: nfs-server-gke-vol
  volumeClaimTemplates:
  - metadata:
      name: nfs-server-gke-vol
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nfs-server-gke
  name: nfs-server-gke-svc
  namespace: hybris-gke
spec:
  ports:
    - name: mountd
      port: 20048
      protocol: TCP
    - name: nfs
      port: 2049
      protocol: TCP
    - name: rpcbind
      port: 111
      protocol: UDP
  selector:
    app: nfs-server-gke
