hybris-on-anthos-infra-as-code/2_Deployment/2_gke/a2_gke_istio_services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: solr-hybris
  namespace: hybris-gke
spec:
  hosts:
  # must be of form name.namespace.global
  - solr.hybris.global
  # Treat remote cluster services as part of the service mesh
  # as all clusters in the service mesh share the same root of trust.
  location: MESH_INTERNAL
  ports:
  - name: solr
    number: 8983
    protocol: tcp
  resolution: DNS
  addresses:
  # the IP address to which httpbin.bar.global will resolve to
  # must be unique for each remote service, within a given cluster.
  # This address need not be routable. Traffic for this IP will be captured
  # by the sidecar and routed appropriately.
  - 240.0.0.20
  endpoints:
  # This is the routable address of the ingress gateway in cluster2 that
  # sits in front of sleep.foo service. Traffic from the sidecar will be
  # routed to this address.
  - address: 139.178.73.4 # Please adapt to the IP of your Istio Ingress Gateway in onPrem cluster
    ports:
      solr: 15443 # Do not change this port value
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: hybrisdb-hybris
  namespace: hybris-gke
spec:
  hosts:
  # must be of form name.namespace.global
  - hybrisdb-svc.hybris.global
  # Treat remote cluster services as part of the service mesh
  # as all clusters in the service mesh share the same root of trust.
  location: MESH_INTERNAL
  ports:
  - name: mysql
    number: 3306
    protocol: tcp
  resolution: DNS
  addresses:
  # the IP address to which httpbin.bar.global will resolve to
  # must be unique for each remote service, within a given cluster.
  # This address need not be routable. Traffic for this IP will be captured
  # by the sidecar and routed appropriately.
  - 240.0.0.30
  endpoints:
  # This is the routable address of the ingress gateway in cluster2 that
  # sits in front of sleep.foo service. Traffic from the sidecar will be
  # routed to this address.
  - address: 139.178.73.4 # Please adapt to the IP of your Istio Ingress Gateway in onPrem cluster
    ports:
      mysql: 15443 # Do not change this port value
